index.html, styles.css: wrap cards in main-content container in a separate container, card-container, within another container called project-container. This helps ensure that the title of the projects is properly formatted. Repeat the same process with the misc-container, and adjust CSS accordingly.

--- a/styles.css
+++ b/styles.css
@@ -172,20 +172,20 @@ h1, h2, h3, h4, h5, h6 {
 
 /*  */
 
+/* CONTENT CONTAINER */
 .main-content {
     grid-column: 2;
     display: grid;
     grid-template-columns: 2fr 1fr;
 }
 
-.project-container {
-    grid-column: 1;
+.card-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 15px;
 }
 
-.project-container .cards {
+.card-container .cards {
     height: 200px;
 }
 
@@ -193,4 +193,23 @@ h1, h2, h3, h4, h5, h6 {
     grid-column: 2;
     display: grid;
     grid-template-rows: repeat(2, 1fr);
+}
+
+.misc-container div {
+  border: 2px solid lime;
+}
+
+.main-content ul {
+    list-style-type: none;
+
+}
+
+.announcements ul, 
+.trending ul {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  text-align: start;
+  font-size: var(--font-size-base);
+  border: 2px solid dodgerblue;
 }
